# HackAI_Hack-230648

./: README.md
backend/: .gitignore  pyproject.toml
backend/src/: email_alert.py  index.py  main.py  models.py
backend/src/user_data/: user_data.json
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/About/: About.jsx
frontend/src/components/Currencies/: Currencies.jsx
frontend/src/components/DeleteService/: DeleteService.jsx
frontend/src/components/Footer/: Footer.jsx
frontend/src/components/Navbar/: Navbar.jsx
